--- a/index.css
+++ b/index.css
@@ -99,11 +99,13 @@ h1{
     margin: 10px 0;
     text-align: justify;
     width: 30%;
+    border-radius:5px ;
+    box-shadow:0px 0px 15px ;
 
 }
 .next{
     background: black;
     background-color: red;
-    
+
 
 }
