--- a/index.css
+++ b/index.css
@@ -99,13 +99,19 @@ h1{
     margin: 10px 0;
     text-align: justify;
     width: 30%;
-    border-radius:5px ;
+    border-radius:30px ;
     box-shadow:0px 0px 15px ;
 
 }
 .next{
     background: black;
     background-color: red;
+    padding: 10px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns:30% 20% ;
+    width: 90%;
+    gap: 40%;
 
 
 }
