--- a/index.css
+++ b/index.css
@@ -90,14 +90,14 @@ h1{
     width: 90%;
     margin: 0 auto;
     display: grid;
-    grid-template-columns:24% 24% 24% 24%;
+    grid-template-columns:25% 25% 25% 25%;
     gap: 1%;
 
 }
 .col{
     padding: 15px;
     margin: 10px 0;
-    text-align: justify;
+    text-align: center;
     width: 30%;
     border-radius:30px ;
     box-shadow:0px 0px 15px ;
@@ -114,4 +114,10 @@ h1{
     gap: 40%;
 
 
+}
+.now{
+    color: blue;
+    padding: 5px;
+    width: 50%;
+    margin: 10px 0;
 }
