--- a/index.css
+++ b/index.css
@@ -98,11 +98,12 @@ h1{
     margin: 10px 0;
     text-align: center;
     width: 30%;
-    box-shadow:0px 0px 15px ;
+    box-sizing: 25%;
 
 }
 .next{
-    background-color: red;
+    background-color:black;
+    background-size: auto;
     padding: 10px;
     margin: 0 auto;
     display: grid;
