--- a/index.css
+++ b/index.css
@@ -103,12 +103,12 @@ h1{
 }
 .next{
     background-color:black;
-    background-size: auto;
+    background-size: cover;
     padding: 10px;
     margin: 0 auto;
     display: grid;
     grid-template-columns:30% 20% ;
-    width: 90%;
+    width: 100%;
     gap: 50%;
 
 
