--- a/index.css
+++ b/index.css
@@ -97,8 +97,7 @@ h1{
     padding: 15px;
     margin: 10px 0;
     text-align: center;
-    box-sizing: 50%;
-    border-radius: 15px;
+    box-sizing: content-box;
 
 }
 .next{
@@ -108,6 +107,7 @@ h1{
     display: grid;
     grid-template-columns:30% 20% ;
     width: 100%;
+    gap: 70%;
 
 
 }
