--- a/index.css
+++ b/index.css
@@ -110,14 +110,29 @@ h1{
     display: grid;
     grid-template-columns:30% 20% ;
     width: 100%;
-    gap: 70%;
+    gap: 50%;
 
 }
 .now{
     padding: 5px;
-    width: 100%;
+    width: 90%;
     margin: 10px 0;
 }
 .now .p{
     margin: 60%;
+}
+.sec3{
+    background-color:red;
+    padding: 10px;
+    margin: 0 auto;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    gap: 2%;
+}
+.opps{
+    background-color: blue;
+    padding:8%;
+    width: 80%;
+    margin: 10px 0;
 }
